kubernetes/configs/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:9.5.5
        ports:
          - containerPort: 3000
        volumeMounts:
          - name: grafana-ds
            mountPath: /etc/grafana/provisioning/datasources
          - name: dashboards
            mountPath: /etc/grafana/provisioning/dashboards
            readOnly: true
      volumes:
        - name: grafana-ds
          configMap:
            name: grafana-datasource
        - name: dashboards
          configMap:
            name: grafana-dashboard
